# linux-control

./: CMakeLists.txt  README.md
src/: main.cpp
src/data/: Branding.cpp  Branding.h  ConfFile.h  WindowsTimeZones.cpp  WindowsTimeZones.h
src/devices/: DeviceUtils.h  KnownDriverDates.h  PrinterScanner.cpp  PrinterScanner.h  SysfsScanner.cpp
src/ui/: AnalogClock.h  CategoryWidget.cpp  Commands.h  DeviceItem.h  LevelMeter.h  LinkLabel.h  MainWindow.cpp  MainWindow.h  PageId.h  PageRegistry.cpp  PageRegistry.h  Win7Ui.h
src/ui/dialogs/: DateTimeDialog.cpp  DateTimeDialog.h  DevicePropertiesDialog.cpp  DevicePropertiesDialog.h  LinverConfigDialog.cpp  LinverConfigDialog.h  SoundDialog.cpp  SoundDialog.h
src/ui/pages/: ActionCenterPage.cpp  ActionCenterPage.h  DevicesAndPrintersPage.cpp  DevicesAndPrintersPage.h  EaseOfAccessPage.cpp  EaseOfAccessPage.h  FirewallPage.cpp  FirewallPage.h  FontsPage.cpp  FontsPage.h  InstalledUpdatesPage.cpp  InstalledUpdatesPage.h  LinuxUpdatePage.cpp  LinuxUpdatePage.h  NetworkSharingPage.cpp  NetworkSharingPage.h  PerformancePage.cpp  PerformancePage.h  PersonalizationPage.cpp  PersonalizationPage.h  PowerOptionsPage.cpp  PowerOptionsPage.h  ProgramsFeaturesPage.cpp  ProgramsFeaturesPage.h  SystemPage.cpp  SystemPage.h  UserAccountsPage.cpp  UserAccountsPage.h
